--- a/welcome.html
+++ b/welcome.html
@@ -57,8 +57,8 @@
     <button class="redirect-button" onclick="window.location.href='Cheats.html'">Cheats</button>
     <button class="redirect-button" onclick="window.location.href='unblockers.html'">Unblockers</button>
     <button class="redirect-button" onclick="window.location.href='sound board.html'">Sound Board</button>
-    <button class="redirect-button" onclick="window.location.href='chat.html'">chat</button>
-
+    <button class="redirect-button" onclick="window.location.href='chatgpt.html'">chatgptchat</button>
+    <button class="redirect-button" onclick="window.location.href='secrect.html'">not allowed</button>
     <script>
         // Add keyboard shortcut listener at the document level
         document.addEventListener('keydown', function(event) {
