--- a/index.html
+++ b/index.html
@@ -520,5 +520,8 @@ function login(event) {
     return true;
 }
 </script>
+<link rel="manifest" href="/manifest.json" />
+<button id="installButton" style="display: none;">Install App</button>
+
 </body>
 </html>
